service-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-nodejs
  labels:
    app: hello-nodejs
spec:
  selector:
    app: hello-nodejs
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
