service-loadbalancer-private.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-nodejs-lbservice
  labels:
    app: hello-nodejs
  #annotations:
  #  service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: private
spec:
  selector:
    app: hello-nodejs
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    # targetPort: 9376
