service-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-nodejs-lbservice
spec:
  selector:
    app: hello-nodejs
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    # targetPort: 9376
