service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-nodejs-npservice
spec:
  selector:
    app: hello-nodejs
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31000 #30000-32767
