ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-nodejs-ingressre
  annotations:
    # ingress.bluemix.net/rewrite-path: "serviceName=<service_name1> rewrite=<target_path1>;serviceName=<service_name2> rewrite=<target_path2>"
    # ex) ingress.bluemix.net/rewrite-path: "serviceName=app rewrite=/"
spec:
  tls:
  - hosts:
    - dev.app.mycluster.jp-tok.containers.appdomain.cloud # ibmcloud ks cluster-get mycluster --json | jq '.ingressHostname'
    secretName: mycluster # ibmcloud ks cluster-get mycluster --json | jq '.ingressSecretName'
  rules:
  - host: dev.app.mycluster.jp-tok.containers.appdomain.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-nodejs-service
          servicePort: 80
